# turtle

./: .gitignore  Makefile  SHELL_VARS  core.py  pyproject.toml
bish/: builtins.py  datatypes.py  errors.py  evaluate.py  main.py  multilines.py  parsing.py  spec.lark  util.py  variables.py
tests/: test_parser.py  test_transformer.py
tests/fixtures/parsing/: do_while.yml  for1.yml  for2.yml  foreach1.yml  if1.yml  if2.yml  if3.yml  if4.yml  multistatement1.yml  while_do.yml
tests/fixtures/temp/: README.md  for1.yml
turtleshell/: builtins.py  evaluate.py  main.py  parsing.py  spec.lark  util.py  variables.py
